--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     "babel-plugin-transform-class-properties": "latest",
     "babel-preset-env": "latest",
     "babel-preset-react": "latest",
-    "dashboard": "^0.0.1",
+    "i18next": "^17.0.4",
+    "i18next-browser-languagedetector": "^3.0.1",
     "parcel-bundler": "latest",
     "predicator": "file:../predicator-js",
     "prop-types": "^15.5.4",
     "react": "^16.0.0",
     "react-ace": "^6.5.0",
     "react-dom": "^16.0.0",
+    "react-i18next": "^10.11.2",
     "react-inspector": "^3.0.2",
     "react-liquid": "^1.2.0",
-    "react-router-dom": "^5.0.1",
-    "recharts": "^1.6.2"
+    "react-router-dom": "^5.0.1"
   },
   "scripts": {
     "start": "parcel src/index.html",
